test/typecheck/errors/current-badtype.boa
o: output sum of int;

visit(input, visitor {
	before Statement -> if (current(int)) o << 1;
});
